--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -89,7 +89,7 @@ body {
     @apply bg-themeblue text-base leading-6 font-semibold px-5 py-4 rounded-full text-white border border-themeblue hover:text-themeblue hover:bg-transparent;
   }
   .accordion{
-    @apply p-4  border bg-white border-[#D9D9D9] rounded-2xl mb-3 last:mb-0 text-lg font-semibold text-[#292929];
+    @apply p-5  border bg-white border-[#D9D9D9] rounded-2xl mb-3 last:mb-0 text-lg font-semibold text-[#292929];
   }
 .form-custom-input{
   @apply rounded-lg border border-[#0000003B] p-2 w-full;
@@ -334,8 +334,8 @@ ul.simple-easy-list .list-dotted-line:before {
   @apply bg-white shadow-none text-[#989898] h-8 w-8 min-w-8 md:min-w-9 md:h-9 md:w-9 rounded-xl text-center flex items-center justify-center hover:bg-[#f4f4f5];
 }
 /* Start icon animation */
-.banner-fb-icon,.banner-insta-icon,.animate-updown{
-  animation: animate-updown 8s infinite ease-in;
+.banner-fb-icon img,.banner-insta-icon img,.animate-updown{
+  animation: animate-updown 10s infinite ease-in;
 }
 .animate-updown-sm{
   animation: animate-updown-sm 7s infinite ease-in;
@@ -380,7 +380,7 @@ ul.simple-easy-list .list-dotted-line:before {
       }
   
       50% {
-        transform: translateY(35px);
+        transform: translateY(20px);
       }
   
       100% {
@@ -415,13 +415,16 @@ ul.simple-easy-list .list-dotted-line:before {
 .marquee {
   display: flex;
   gap: 16px; /* Space between images */
-  /* animation: marquee 10s linear infinite; */
+ 
 }
-
+.marquee-on{
+   animation: marquee 10s linear infinite;
+}
 .marquee img {
   flex-shrink: 0;
   height: 100%; /* Adjust to the container height */
   width: auto; /* Maintain aspect ratio */
+  max-height: 40px;
 }
 
 @keyframes marquee {
