--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -96,7 +96,7 @@ body {
     @apply bg-themeblue text-base leading-6 font-semibold px-5 py-4 rounded-full text-white border border-themeblue hover:text-themeblue hover:bg-transparent;
   }
   .accordion{
-    @apply p-5  border bg-white border-[#D9D9D9] rounded-2xl mb-3 last:mb-0 text-lg font-semibold text-[#292929];
+    @apply p-5  border bg-white border-[#D9D9D9] rounded-2xl mb-3 last:mb-0 text-lg font-semibold text-[#292929] xl:-mx-2;
   }
 .form-custom-input{
   @apply rounded-lg border border-[#0000003B] p-2 w-full;
@@ -529,10 +529,5 @@ ul.simple-easy-list .list-dotted-line:before {
 @media(max-width:767px){
   .getting-stareted-main{
     border: 3px solid #FFFFFF63;
-  }
-}
-@media(max-width:640px){
-  .getting-stareted-main{
-    border: 6px solid #FFFFFF63;
   }
 }
